--- a/Ideative/pom.xml
+++ b/Ideative/pom.xml
@@ -47,6 +47,11 @@
       <artifactId>commons-lang3</artifactId>
       <version>3.5</version>
     </dependency>
+    <dependency>
+      <groupId>commons-httpclient</groupId>
+      <artifactId>commons-httpclient</artifactId>
+      <version>3.1</version>
+    </dependency>
   </dependencies>
   <properties>
     <java.version>1.8</java.version>
